--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>CoronaVirusTrackerApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CoronaVirusTracker</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring Boot web app</description>
 	<properties>
 		<java.version>14</java.version>
 	</properties>
