--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>CoronaVirusTracker</name>
 	<description>Spring Boot web app</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,6 +51,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>15.0.2</source>
+					<target>15.0.2</target>
+				</configuration>
+			</plugin>
+
+
+
 		</plugins>
 	</build>
 
