--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CoronaVirusTracker</name>
 	<description>Spring Boot web app</description>
-	<properties>
+<!--	<properties>
 		<java.version>15</java.version>
-	</properties>
+	</properties>-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,8 +57,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>15.0.2</source>
-					<target>15.0.2</target>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 
